# ESIR_TLCProjet

./: .gitignore  README.md  test4.while.cpp
compiler/: compiled.w3a  lib_while.h  test.cpp  test1.while.cpp  test2.while  test4.while.cpp
compiler/src/: CPPConverter.java  Convert.java  Helpers.java  Main.java  Nil.java  Node.java  SpaghettiStack.java  Symbol.java  ThreeAddrVisitor.java  TokenFunc.java  Tree.java  VisitorTA.java  VisitorTS.java  VisitorTest.java  WhileASTVisitor.java  WhileCompiler.java  WhileOptimizator.java  WhileValidator.java  whileLexer.java  whileParser.java
compiler/src/Info/: FuncInfo.java  Info.java  VarInfo.java
compiler/src/Optimization/: Block.java  WhileOptimizator.java  WhileOptimizer.java
compiler/src/SymbolTable/: STBlockEnd.java  STBlockStart.java  STEntry.java  STFunc.java  STVariable.java  SymbolTable.java
compiler/src/ThreeAddr/: Argument.java  BlockName.java  Constante.java  EmptyArgument.java  Line.java  Nil.java  Program.java  Registre.java  Symbol.java  Text.java  Variable.java
compiler/src/old_runtime/: Nil.java  Node.java  Symbol.java  Tree.java
grammaire/: test1.while  test2.while  tests_basiques.while  while.g
lib/: CMakeLists.txt  compile_linux.sh  compile_windows.bat  lib_while.cpp  lib_while.h
tests/: add.while  test1.while  test3.while  test3.while.cpp  test3.while.w3a  test4.while  test5_fail.while  test6.while  test_complet.while
